k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress
  namespace: helpdesk-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: helpdesk.nktinn.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: helpdesk-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helpdesk-client
                port:
                  number: 80
